--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
 *{
-padding: 0;
-margin: 0;
-box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 } 
 
 
 header{
     height: 100px;
     background-color: greenyellow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .logo{
-    height: 100px;
+    height: 80px;
+    
 }
 main{
     height: 100px;
