--- a/style.css
+++ b/style.css
@@ -14,12 +14,13 @@ header{
 }
 
 .logo{
-    height: 100px;
+    height: 90px;
     
 }
 main{
-    height: 100px;
-    background-color: blue;
+    
+
+    
 }
 .intro-container{
     display: flex;
@@ -29,30 +30,29 @@ main{
     padding-top: 32px;
     padding-bottom: 32px;
 }
+
 .titulo{
     text-align: center;
     width: 800px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 48px;
-    text-align: center;
+    
 }
 .sub-titulo{
 
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
 }        
-.info{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
-}
 .info span{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 900;
+    
+    font-weight: 700px;
 }
 .foto-bolo{
 
-width: 800px;
-border: lawngreen;
+    width: 800px;
+    border:4px solid lime;
+    border-radius: 4px;
 }
 footer{
     height: 100px;
